--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #Conexão com o banco de dados
 spring.datasource.url=jdbc:postgresql://localhost:5432/jweb2
-spring.datasource.username=postgres
+spring.datasource.username=Wellington
 #informando a senha do banco de dados
-spring.datasource.data-password=postgres
+spring.datasource.data-password=lino2010
 #Informando o Driver utilizado no banco de dados
 spring.datasource.driver-class-name=org.postesql.Driver
 
